<resources>
    <string name="app_name">Основы Информационной Безопасности</string>
    <string name="Theory">Теория</string>
    <string name="Tests">Тесты</string>
    <string name="Encryption">Шифрование</string>
    <string name="help">Справочная информация</string>
    <string name="art1">Простая замена</string>
    <string name="art2">Полиалфавитная замена</string>
    <string name="art3">Маршруты Гамильтона</string>
    <string name="art4">Цифровая подпись RSA</string>
    <string name="title_activity_quiz">Тесты</string>
    <string name="action_settings">Settings</string>
    <string name="QuizTitle" />
    <string name="Question" />
    <string name="btn_answer1" />
    <string name="btn_answer2" />
    <string name="btn_answer3" />
    <string name="btn_answer4" />
    <string name="art_1p1">"      "Cущность методов замены (подстановки) заключается в замене символов
исходной информации, записанных в одном алфавите, символами из другого
алфавита по определенному правилу.
\n"      "Самым простым является метод прямой замены. Символам Soi исходного
алфавита Ао, с помощью которых записывается исходная информация, однозначно
ставятся в соответствие символы S1i шифрующего алфавита Ai. В простейшем случае
оба алфавита могут состоять из одного и того же набора символов. Например, оба
алфавита могут содержать буквы алфавита кириллица.
\n"      "Задание соответствия между символами обоих алфавитов осуществляется с
помощью преобразования числовых эквивалентов символов исходного текста То,
длиной - К символов, по определенному алгоритму.
\n"      "Алгоритм моноалфавитной замены может быть представлен в виде
последовательности шагов.
\n"   "Шаг 1. Формирование числового кортежа Loh путем замены каждого символа Soi
To (i=l,K), представленного в исходном алфавите Ао размера [lxR], на число hoi(soi),
соответствующее порядковому номеру символа soi в алфавите Ао.
\n"   "Шаг 2. Формирование числового кортежа L1h путем замены каждого числа
кортежа Loh на соответствующее число h1i кортежа L1h, вычисляемое по формуле:
</string>
    <string name="art_6p1">
        \n"     "<b>Обзор антивирусных программ</b>
        \n"     "Одной из самых больших угроз безопасности в информационных технологиях являются вирусы.
        \n"     "Эти вредоносные программы могут «украсть» или уничтожить персональные данные, однако защититься от такой опасности достаточно просто.
        \n"     "По запросу «антивирус» любая поисковая система выдаст вам с десяток ссылок, каждая из которых предлагает вам легкое и быстрое решение всех ваших проблем. А вот на чем остановить свой выбор?
        \n"     "<b>Желаете обмануться – доверяйте «независимым» исследованиям</b>
        \n"     "В Интернете достаточно много «независимых» исследований от различных обозревателей или каких-то там лабораторий, в которых говорится, порой убедительно, о преимуществах той или иной антивирусной системы над остальными.
        Не стоит обольщаться и слепо верить написанному, ведь достаточно очевидно, что идеалы не достижимы и все антивирусы обладают недостатками. Ну и естественно, что многие лаборатории являются «дочками» компаний-разработчиков, а обозреватели наняты заказчиками.
        Вы сами можете догадаться, насколько честны эти статьи.
        \n"     "Все антивирусы достаточно похожи друг на друга, но тем не менее, решать, какой выбрать, предстоит именно вам.
        \n"     "И все настройки, вами произведенные, и все возможные ошибки в «ловле» вирусов будут вашим самостоятельным решением, поэтому просто игнорируйте любые рекомендации источников в Интернете.
        \n"     "Рекомендациям скажите «нет», а вот читать и сравнивать вы просто обязаны. Поэтому в нашей сегодняшней статье мы попробуем рассказать о современных антивирусах и выделить особенности в каждой программе.
        \n"     "<b>Текущий топ антивирусов</b>
    </string>
    <string name="art_6p2">
        \n"     "<b>Dr.Web.</b>
        \n"     "Первым мы рассмотрим представителя классической артиллерии в борьбе с вирусами. Да, этот антивирус «тяжелый» и работает не так шустро, как его соперники.
        \n"     "Да, он требует достаточно много ресурсов. Да, платный, но, пожалуй, это самый большой недостаток, а вот достоинств у него хоть отбавляй. Главным, безусловно, плюсом является способность излечить буквально всё.
        \n"     "Из тысячи файлов Dr.Web не восстановит только штук пять, и то если они заражены и зашифрованы сразу несколькими паразитами. Вторым плюсом программы выступает постоянное совершенствование.
        \n"     "Кто постарше, тот вспомнит, каким неповоротливым был антивирус когда-то, и каким он стал сейчас! Его скорость работы кажется немыслимой, хотя и нагрузка на систему очевидно большая, но и выполняет антивирус свои дела на совесть.
        \n"     "А еще и пропали сложности с установкой и настройкой. На сайте есть все необходимые инструкции и мануалы. С обновлением и поддержкой также не возникнет никаких проблем, если у вас, естественно, есть лицензия. Сайт разработчика: www.drweb.ru

    </string>
    <string name="art_6p3">
        \n"     "<b>Dr.Web CureIt!</b>
        \n"     "Помимо обычного антивируса и нерассмотренного в статье комплексной программы Security Space компания Dr.Web выпускает и отдает в бесплатное домашнее использование еще и замечательную утилиту, названную CureIt!.
        \n"     "Она очень проста в использовании, прежде всего потому, что не требует установки и у нее нет проблем при работе на компьютере с другим антивирусным ПО, и на время запуска лечения ранее установленные антивирусы отключать или удалять не требуется.
        \n"     "Если ваш антивирус не справился со своей работой и какие-нибудь вирусы таки пробрались в вашу систему, то смело скачивайте CureIt!, запускайте утилиту, нажимайте одну-две кнопки и ждите – остальное программа сделает за вас.
        \n"     "В утилиту всегда встроены самые последние вирусные базы от основной программы Dr.Web, но стоит помнить, что и качать всегда нужно новую версию, потому что в CureIt! не входит модуль обновления вирусных баз.
        \n"     "Но, как пишут на сайте, новая версия утилиты выпускается один или несколько раз в час, поэтому у команды нашего блога нет сомнений в ее эффективности.
        \n"     "Утилита умеет игнорировать большинство блокировщиков Windows, а это позволяет еще эффективнее бороться с вирусами. Бесплатно проверить свой компьютер при помощи Dr.Web CureIT! можно на сайте www.free.drweb.ru

    </string>
    <string name="art_6p4">
        \n"     "<b>Kaspersky Anti-Virus.</b>
        \n"     "Его хвалят и ругают, его любят и ненавидят. Хвалят специалисты в области технологий и ругают другие эксперты, ненавидят конкуренты и любят простые пользователи. У Касперского есть очевидная главная проблема – он хочет очень много ресурсов.
        \n"     "Версия KIS (Kaspersky Internet Security) 2016 требует 2 Гигабайта оперативной памяти! Многие не любят эту программу за кучу ненужных модулей (они качественно проработаны и интегрированы, но порой пользователь и правда запускает их раз в год).
        \n"     "Но вся соль в том, что эти модули действительно улучшают программу, позволяя антивирусу качественнее справляться с угрозами. Некоторые версии Касперского позволяют, например, блокировать сайты стран, которым присвоен высокий уровень опасности заражения.
        \n"     "Родительский контроль, функции восстановления и откатов – это все довольно интересные механизмы, которые с лихвой компенсируют его главный недостаток. Но каким бы быстрым не становился Касперский с каждой версией, он все равно отстает от конкурентов.
        \n"     "Хотя в этом году компанией был сделан существенный прорыв в скоростном аспекте –представлен продукт Kaspersky Free, в котором убраны вышеупомянутые ненужные модули. Тем не менее, за платную версию деньги берут совсем не зря.
        \n"     "Сайт разработчика: www.kaspersky.ru

    </string>
    <string name="art_6p5">
         \n"     "<b>ESET NOD32</b>
        \n"     "Отличный антивирус, созданный в Словакии, который очень качественен в работе, правда является платным. Незначительная загрузка ресурсов является его главным достоинством.
        \n"     "Вы можете продолжать работу на компьютере, пока Eset сканирует систему. Никаких замедлений это не вызывает. Еще одним достоинством NOD выступает его прекрасная совместимость с другими антивирусами. Мы знаем случаи, когда пользователи одновременно устанавливали на компьютер платный NOD и бесплатный Avast (о котором ниже).
        \n"     "У ESET NOD 32 есть недостаток, но он довольно существенный. Почти во всех обзорах и независимых исследованиях этот антивирус занимает последние места в статистике лечения файлов. Бывали и такие цифры, как один вылеченный файл из 1000. Это, конечно же, печальный факт. Но тем не менее, как блокиратор вирусов на новую ОС эту программу можно рассматривать. Сайт разработчика: www.esetnod32.ru

    </string>
    <string name="art_6p6">
         \n"     "<b>Avast!</b>
        \n"     "Много где этот антивирус назван лучшим, правда надо быть внимательным, потому что не везде лучшей названа одна и та же версия программы. А версий у Аваста хватает: их целых четыре, начиная от Free до Premier.
        \n"     "Бесплатная версия, несомненно, является конкурентным преимуществом, при этом она обеспечивает достаточный уровень защиты. Все программы, пожалуй, кроме самой навороченной, нетребовательны к ресурсам системы, и их работу легко можно не заметить. Простая установка и настройка присуща этому антивирусу, дополнительным плюсом выступает «всеядность».
        \n"     "Авасту в целом не важно, каким вирусом модифицирован ваш файл, потому что интеллектуальное распознавание угроз может пресечь атаку на корню. Недостатки все же есть. Первый– куча рекламы в бесплатной версией. Второй – Аваст, как и NOD, не любит лечить уже зараженные файлы – ему гораздо проще предотвратить атаку. Правда, статистика тут все же менее печальна: по усредненным оценкам он вылечивает 20% вирусных файлов. Сайт разработчика: www.avast.ru

    </string>
    <string name="art_6p7">
        \n"     "<b>Какой антивирус лучше выбрать?</b>
        \n"     "Все рассмотренные нами антивирусы популярны, все они имеют какие-то преимущества перед другими. Но у всех у них есть одна общая черта: эти антивирусы являются кроссплатформенными. Установить вы их можете на любую операционную систему, даже мобильную, и все установочные дистрибутивы вы можете скачать и купить в одном месте.
        \n"     "И самое главное – помните, все эти антивирусы рассчитаны на ответственного пользователя. Знайте, что защитить ваши файлы лучше вас не сможет ни одна автоматика. Нажимая на кнопку «Принять в исключение», заставляя таким образом антивирус игнорировать потенциальную угрозу, вы сами ставите под удар свои данные. Антивирусы почти никогда не искупают целиком ошибки пользователей, а лишь попытаются их не допустить.
    </string>
</resources>