<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/RelativeLayout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:scrollbarStyle="insideOverlay">


    <SeekBar
        android:id="@+id/seekBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:max="30"
        android:progress="15" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/seekBar">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="sans-serif"
                android:isScrollContainer="true"
                android:padding="5sp"
                android:paddingBottom="10sp"
                android:text="@string/art_6p1"
                android:textAlignment="gravity"
                android:textIsSelectable="true"
                android:textSize="14sp"
                android:typeface="serif" />



            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="sans-serif"
                android:isScrollContainer="true"
                android:padding="5sp"
                android:paddingBottom="10sp"
                android:text="@string/art_6p2"
                android:textAlignment="gravity"
                android:textIsSelectable="true"
                android:textSize="15sp"
                android:typeface="serif" />



            <TextView
                android:id="@+id/textView3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="sans-serif"
                android:isScrollContainer="true"
                android:padding="5sp"
                android:paddingBottom="10sp"
                android:text="@string/art_6p3"
                android:textAlignment="gravity"
                android:textIsSelectable="true"
                android:textSize="15sp"
                android:typeface="serif" />



            <TextView
                android:id="@+id/textView4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="sans-serif"
                android:isScrollContainer="true"
                android:padding="5sp"
                android:paddingBottom="10sp"
                android:text="@string/art_6p4"
                android:textAlignment="gravity"
                android:textIsSelectable="true"
                android:textSize="15sp"
                android:typeface="serif" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="sans-serif"
                android:isScrollContainer="true"
                android:padding="5sp"
                android:paddingBottom="10sp"
                android:text="@string/art_6p5"
                android:textAlignment="gravity"
                android:textIsSelectable="true"
                android:textSize="15sp"
                android:typeface="serif" />
            <TextView
                android:id="@+id/textView6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="sans-serif"
                android:isScrollContainer="true"
                android:padding="5sp"
                android:paddingBottom="10sp"
                android:text="@string/art_6p6"
                android:textAlignment="gravity"
                android:textIsSelectable="true"
                android:textSize="15sp"
                android:typeface="serif" />
            <TextView
                android:id="@+id/textView7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="sans-serif"
                android:isScrollContainer="true"
                android:padding="5sp"
                android:paddingBottom="10sp"
                android:text="@string/art_6p7"
                android:textAlignment="gravity"
                android:textIsSelectable="true"
                android:textSize="15sp"
                android:typeface="serif" />

        </LinearLayout>
    </ScrollView>

</RelativeLayout>
